--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
 <body data-ng-app="subcontractorsApp">
-<div class="container" data-ng-controller="resultsController">
+<div class="container">
+    <section data-ng-controller="OtherController" class="clearfix col-md-9 text-center">
+        <dir-pagination-controls boundary-links="true" on-page-change="pageChangeHandler(newPageNumber)"></dir-pagination-controls>
+    </section>
+    <section data-ng-controller="resultsController">
         <div id="info" class="col-md-9">
             <h1>Using the Subcontracting Directory</h1>
             <p><strong>Who the GSA Subcontracting Directory is for</strong>: The GSA Subcontracting Directory is published for small business concerns seeking subcontracting opportunities with General Services Administration (GSA)
@@ -47,32 +51,26 @@
         </div>
 
         <div id="results" class="col-md-9">
-            <div class="clearfix">
-                <h3 class="pull-left">Displaying <b>{{(contracts | filter:search).length }}</b> results:</h3>
-                <button id="export-option" class="btn btn-danger pull-right" data-ng-show="(contracts | filter:search).length > 0" href="#" data-ng-click="exportData()">Export to xls</button>
-            </div>
-            <hr>
             <div id="search">
                 <form>
                     <div class="form-group">
                         <h3>Company</h3>
                         <label class="sr-only" for="keyword">Search Company</label>
                         <input class="col-sm-12 form-control" type="text" id="keyword" data-ng-model="search.contractor" placeholder="All" autocomplete="off">
-                        <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small>
+                        <small>Type any part of a company name to filter the list</small>
                     </div>
-                    <h4>Advanced Filters</h4>
                     <div class="row">
                         <div class="form-group col-md-3">
                             <h3>NAICS Code</h3>
-                            <select class="form-control" data-ng-model="search.naics_front" data-ng-options="contract.naics_front as contract.naics_front for contract in contracts | unique : 'naics_front'| orderBy : 'naics_front'">
-                                <option value="null" </option>
+                            <select class="form-control" data-ng-model="search.naics_front" data-ng-change="changeNaics()" data-ng-options="contract.naics_front as contract.naics_front for contract in contracts | unique : 'naics_front'| orderBy :
+                            'naics_front'">
                             </select>
-                            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small>
+                            <small>Select a three digit category</small>
+                            <em class="clear-filter" data-ng-show="filterNaics" data-ng-click="clearNaics()">X</em>
                         </div>
                         <div class="form-group col-md-3">
-                            <h3>Location</h3>
-                            <select class="form-control" data-ng-model="search.performance_state">
-                                <option value=" " selected="selected">All</option>
+                            <h3>Place of Performance</h3>
+                            <select class="form-control" data-ng-model="search.performance_state" data-ng-change="changePerformPlace()">
                                 <option value="AL">Alabama</option>
                                 <option value="AK">Alaska</option>
                                 <option value="AZ">Arizona</option>
@@ -125,10 +123,79 @@
                                 <option value="WI">Wisconsin</option>
                                 <option value="WY">Wyoming</option>
                             </select>
-                            <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </small>
+                            <small>Select state in which work takes place</small>
+                            <em class="clear-filter" data-ng-show="filterPerformPlace" data-ng-click="clearPerformPlace()">X</em>
                         </div>
-                    </div>
+                        <div class="form-group col-md-3">
+                            <h3>Company Location</h3>
+                            <select class="form-control" data-ng-model="search.state" data-ng-change="changeCompLoc()">
+                                <option value="AL">Alabama</option>
+                                <option value="AK">Alaska</option>
+                                <option value="AZ">Arizona</option>
+                                <option value="AR">Arkansas</option>
+                                <option value="CA">California</option>
+                                <option value="CO">Colorado</option>
+                                <option value="CT">Connecticut</option>
+                                <option value="DE">Delaware</option>
+                                <option value="DC">District Of Columbia</option>
+                                <option value="FL">Florida</option>
+                                <option value="GA">Georgia</option>
+                                <option value="HI">Hawaii</option>
+                                <option value="ID">Idaho</option>
+                                <option value="IL">Illinois</option>
+                                <option value="IN">Indiana</option>
+                                <option value="IA">Iowa</option>
+                                <option value="KS">Kansas</option>
+                                <option value="KY">Kentucky</option>
+                                <option value="LA">Louisiana</option>
+                                <option value="ME">Maine</option>
+                                <option value="MD">Maryland</option>
+                                <option value="MA">Massachusetts</option>
+                                <option value="MI">Michigan</option>
+                                <option value="MN">Minnesota</option>
+                                <option value="MS">Mississippi</option>
+                                <option value="MO">Missouri</option>
+                                <option value="MT">Montana</option>
+                                <option value="NE">Nebraska</option>
+                                <option value="NV">Nevada</option>
+                                <option value="NH">New Hampshire</option>
+                                <option value="NJ">New Jersey</option>
+                                <option value="NM">New Mexico</option>
+                                <option value="NY">New York</option>
+                                <option value="NC">North Carolina</option>
+                                <option value="ND">North Dakota</option>
+                                <option value="OH">Ohio</option>
+                                <option value="OK">Oklahoma</option>
+                                <option value="OR">Oregon</option>
+                                <option value="PA">Pennsylvania</option>
+                                <option value="RI">Rhode Island</option>
+                                <option value="SC">South Carolina</option>
+                                <option value="SD">South Dakota</option>
+                                <option value="TN">Tennessee</option>
+                                <option value="TX">Texas</option>
+                                <option value="UT">Utah</option>
+                                <option value="VT">Vermont</option>
+                                <option value="VA">Virginia</option>
+                                <option value="WA">Washington</option>
+                                <option value="WV">West Virginia</option>
+                                <option value="WI">Wisconsin</option>
+                                <option value="WY">Wyoming</option>
+                            </select>
+                            <small>Select state of company headquarters</small>
+                            <em class="clear-filter" data-ng-show="filterCompLoc" data-ng-click="clearCompLoc()">X</em>
+                        </div>
+                    </div><!-- end filters -->
                 </form>
+            </div>
+            <hr>
+            <div class="clearfix row">
+                <h4 class="col-md-6">Displaying <b>{{(contracts | filter:search).length }}</b> results:</h4>
+                <div class="form-group col-md-3">
+                    <small>items per page:</small><input type="number" min="10" max="100" step="10" data-ng-model="pageSize">
+                </div>
+                <div class="col-md-3 pull-right">
+                    <button class="btn btn-danger pull-right" data-ng-show="(contracts | filter:search).length > 0" href="#" data-ng-click="exportData()">Export to xls</button>
+                </div>
             </div>
 
             <div id="csv-export" style="display:none">
@@ -156,7 +223,7 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr ng-repeat="contract in contracts | filter: search ">
+                    <tr data-ng-repeat="contract in contracts | filter: search ">
                         <td>{{contract.contractor}}</td>
                         <td>{{contract.phone}}</td>
                         <td>{{contract.state}}</td>
@@ -180,14 +247,14 @@
                 </table>
             </div>
             <!-- repeater -->
-            <div class="result" data-ng-repeat="contract in contracts | filter : search | limitTo : totalDisplayed ">
+            <div class="result" dir-paginate="contract in contracts | filter : search | itemsPerPage: pageSize">
                 <div class="well result">
                     <div class="row">
                         <div class="vcard col-md-6">
                             <h4 class="fn" data-ng-bind-html="contract.contractor | highlight: search.contractor"></h4>
                             <p class="adr">
                                 <span class="street-address">{{contract.street}}</span><br>
-                                <span class="locality">{{contract.city}}</span>, <span class="region">{{contract.state}}</span> <span class="postal-code">{{contract.zip}}</span><br>
+                                <span class="locality">{{contract.city}}</span>, <span class="region" data-ng-bind-html="contract.state | highlight: search.state"></span> <span class="postal-code">{{contract.zip}}</span><br>
                                 <span data-ng-if="contract.phone != '()-'">{{contract.phone}}</span>
                             </p>
                         </div>
@@ -224,22 +291,9 @@
                     <li>Contact <a href="mailto:somedude@gsa.gov">somedude@gsa.gov</a></li>
                 </ul>
             </div>
-            <button data-ng-show="(contracts | filter:search).length > 20 && (contracts | filter:search).length >= totalDisplayed" type="button" class="col-md-8 pull-right btn btn-primary btn-lg btn-block" data-ng-click="loadMore()">Load More</button>
         </div>
-    </div>
+    </section>
 </div>
-
-<!--<div id="issue-tracker">
-    <h3>Known Issues:</h3>
-    <ol>
-        <li>Only returning 600 of more than 1200 results</li>
-        <li>filters results number is not correct when chaining - this effects display of no results message and load more options</li>
-        <li>google location suggestions are too broad - should only be city, state or zip NOT places</li>
-        <li>after results, deleting one input field causes mayhem (when two have been selected)</li>
-        <li>Export to xml</li>
-
-    </ol>
-</div>-->
 
 <!--
 <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
